--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <p>Esta é uma página simples sem estilos CSS.</p>
     <p>Você pode adicionar mais conteúdo aqui.</p>
     <p>Confira tambem a <a href="https://www.flextool.com.br/tabela_cores.html" target="_blank">Tabela de cores </a>.</p>
-	 <img src="http://www.alfamidia.com.br/p/img/2066.jpg" width="350" height="200" alt="Imagem">
+	 <img src="D:\webdesign.jpeg" width="350" height="200" alt="Imagem">
   </main>
   <footer>
     <p>&copy; 2023 Evandoprof</p>
