--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <h2>Página HTML com CSS</h2>
     <p>Contúdo Principal.</p>
     <p>Provas usando formulários.</p>
-    <p>Clique no formulário aqui <a href="https://forms.gle/M4YWwXXuXTPN2orQA" target="_blank">Lógica de Programçao-2bi</a>.</p>
+    <p>Clique no formulário aqui <a href="https://forms.gle/M4YWwXXuXTPN2orQA" target="_blank">Lógica de Programaçao-2bi</a>.</p>
 	 <img src="D:\webdesign.jpeg" width="350" height="200" alt="Imagem">
   </main>
   <footer>
