--- a/Designer.html
+++ b/Designer.html
@@ -3,11 +3,13 @@
 <h3><a href="index.html">Início</a>&nbsp;&nbsp;&nbsp; <a href="Designer.html">Webdesigner</a>&nbsp;&nbsp;&nbsp; 
 <a href="sobre.html">Sobre nós</a>&nbsp;&nbsp;&nbsp; 
 <a href="contato.html">Contate-nos</a></h3>
-&nbsp;<head><title>Página com CSS</title><style>
+
+<head>
+<title>Página com CSS</title><style>
     /* Estilos para o corpo da página */
     body {
       font-family: Arial;
-      background-color: #f0f0f0;
+      background-color: #E0EEEE;
       margin: 0;
       padding: 20px;
     }
@@ -45,8 +47,11 @@
       color: pink;
     }
 	
-	</style></head><body><header>
-    <h1>Página em Construção</h1>
+	</style>
+</head>
+
+<body><header>
+    <h1>&nbsp;Webdesigner</h1>
   </header>
   <main>
     <h2>Página HTML com CSS</h2>
