--- a/sobre.html
+++ b/sobre.html
@@ -46,7 +46,7 @@
     }
 	
 	</style></head><body><header>
-    <h1>Página em Construção</h1>
+    <h1>Sobre nós</h1>
   </header>
   <main>
     <h2>Página HTML com CSS</h2>
