--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   <main>
     <h2>Página HTML com CSS</h2>
     <p>Contúdo Principal.</p>
-    <p>Provas usando formulários.</p>
-    <p>Clique aqui para a <a href="https://forms.gle/M4YWwXXuXTPN2orQA" target="_blank">Pesquisa</a>.</p>
-	 <img src="D:\webdesign.jpeg" width="350" height="200" alt="Imagem">
+    <p>Paginal inicial.</p>
+    <p>Clique aqui para a <a href="www.google.com.br" target="_blank">Pesquisa</a>.</p>
+     <img src="D:\webdesign.jpeg" width="350" height="200" alt="Imagem">
   </main>
   <footer>
     <p>&copy; 2024 Evandoprof</p>
